--- a/wiki/UsingPrivateCompiler.wiki
+++ b/wiki/UsingPrivateCompiler.wiki
@@ -1,3 +1,17 @@
 #summary Describes how to use LaTeX Lab with a private CLSI compiler.
 
-Placeholder.
+Using LaTeX Lab with a private CLSI compiler.
+
+== Setting up your own CLSI server ==
+
+Follow the instructions on CLSI project's <a href="http://code.google.com/p/common-latex-service-interface/wiki/InstallAndConfig">Installation and Configuration</a> page to bring up a CLSI instance.
+
+== Configuring LaTeX Lab ==
+You can configure LaTeX Lab to use a custom CLSI instance by specifying the necessary values in the Compiler -> Settings.
+
+For example, if your CLSI instance's root url is http://myclsi.org/clsi/, then you would enter the following compiler settings in LaTeX Lab:
+  * Select "Use a third party CLSI provider".
+  * *Service URL*: http://myclsi.org/clsi/service.php
+  * *Service Token*: _any alphanumeric 10 character value will do_
+  * *Service Output Path*: http://myclsi.org/clsi/out/<id>
+  * *Compiler Name*: latex
