Edited wiki page through web user interface.

--- a/wiki/UsingPrivateCompiler.wiki
+++ b/wiki/UsingPrivateCompiler.wiki
@@ -13,5 +13,5 @@ For example, if your CLSI instance's root url is http://myclsi.org/clsi/, then y
   * Select "Use a third party CLSI provider".
   * *Service URL*: http://myclsi.org/clsi/service.php
   * *Service Token*: _any alphanumeric 10 character value will do_
-  * *Service Output Path*: http://myclsi.org/clsi/out/`<id>`
+  * *Service Output Path*: http://myclsi.org/clsi/out/{{{<id>}}}
   * *Compiler Name*: latex
