--- a/wiki/UsingPrivateCompiler.wiki
+++ b/wiki/UsingPrivateCompiler.wiki
@@ -10,7 +10,7 @@ Follow the instructions on CLSI project's <a href="http://code.google.com/p/comm
 You can configure LaTeX Lab to use a custom CLSI instance by specifying the necessary values in the Compiler -> Settings.
 
 For example, if your CLSI instance's root url is http://myclsi.org/clsi/, then you would enter the following compiler settings in LaTeX Lab:
-  * Select "Use a third party CLSI provider".
+  * Select _Use a third party CLSI provider_.
   * *Service URL*: {{{http://myclsi.org/clsi/service.php}}}
   * *Service Token*: {{{any alphanumeric 10 character value will do}}}
   * *Service Output Path*: {{{http://myclsi.org/clsi/out/<id>}}}
