--- a/wiki/UsingPrivateCompiler.wiki
+++ b/wiki/UsingPrivateCompiler.wiki
@@ -9,7 +9,7 @@ Follow the instructions on CLSI project's <a href="http://code.google.com/p/comm
 == Configuring LaTeX Lab ==
 You can configure LaTeX Lab to use a custom CLSI instance by specifying the necessary values in the Compiler -> Settings.
 
-For example, if your CLSI instance's root url is http://myclsi.org/clsi/, then you would enter the following compiler settings in LaTeX Lab:
+For example, if your CLSI instance's root url is {{{http://myclsi.org/clsi/}}}, then you would enter the following compiler settings in LaTeX Lab:
   * Select _Use a third party CLSI provider_.
   * *Service URL*: {{{http://myclsi.org/clsi/service.php}}}
   * *Service Token*: {{{any alphanumeric 10 character value will do}}}
