Edited wiki page through web user interface.

--- a/wiki/UsingPrivateCompiler.wiki
+++ b/wiki/UsingPrivateCompiler.wiki
@@ -7,7 +7,7 @@ Using LaTeX Lab with a private CLSI compiler.
 Follow the instructions on the CLSI project's <a href="http://code.google.com/p/common-latex-service-interface/wiki/InstallAndConfig">Installation and Configuration</a> page to bring up a CLSI instance.
 
 === Configuring LaTeX Lab ===
-You can configure LaTeX Lab to use a custom CLSI instance by specifying the necessary values in the Compiler -> Settings.
+You can configure LaTeX Lab to use a custom CLSI instance by specifying the necessary values in the Compiler -> Settings dialog.
 
 For example, if your CLSI instance's root url is {{{http://myclsi.org/clsi/}}}, then you would enter the following compiler settings in LaTeX Lab:
   * Select _Use a third party CLSI provider_.
