--- a/wiki/UsingPrivateCompiler.wiki
+++ b/wiki/UsingPrivateCompiler.wiki
@@ -11,7 +11,7 @@ You can configure LaTeX Lab to use a custom CLSI instance by specifying the nece
 
 For example, if your CLSI instance's root url is {{{http://myclsi.org/clsi/}}}, then you would enter the following compiler settings in LaTeX Lab:
   * Select _Use a third party CLSI provider_.
-  * *Service URL*: {{{http://myclsi.org/clsi/service.php}}}
+  * *Service URL*: {{{http://myclsi.org/service.php}}}
   * *Service Token*: {{{any alphanumeric 10 character value will do}}}
-  * *Service Output Path*: {{{http://myclsi.org/clsi/out/<id>/}}}
+  * *Service Output Path*: {{{http://myclsi.org/out/<id>/}}}
   * *Compiler Name*: {{{latex}}}
